--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.533.0",
     "axios": "^1.7.2",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.14.1",
