--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.14.1",
+    "react-textarea-autosize": "^8.5.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
