--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.14.1",
     "react-textarea-autosize": "^8.5.3",
+    "styled-components": "^6.1.13",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
