--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "react-circular-progressbar": "^2.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.14.1",
     "react-textarea-autosize": "^8.5.3",
-    "styled-components": "^6.1.13",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
