--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.533.0",
     "axios": "^1.7.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti-explosion": "^2.1.2",
