--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.1",
     "react-spinners": "^0.14.1",
     "react-textarea-autosize": "^8.5.3",
     "uuid": "^10.0.0"
