--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-select": "^5.8.1",
     "react-spinners": "^0.14.1",
     "react-textarea-autosize": "^8.5.3",
+    "usehooks-ts": "^3.1.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
