--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.533.0",
+    "@emotion/react": "^11.13.3",
     "axios": "^1.7.2",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
