--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.533.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.13.3",
     "axios": "^1.7.2",
+    "emoji-mart": "^5.6.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
