--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-confetti-explosion": "^2.1.2",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-dropdown": "^1.11.0",
     "react-gauge-chart": "^0.5.1",
